--- a/div1.html
+++ b/div1.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 	<head>
 		<title>catalog</title>
@@ -11,12 +11,86 @@
 		</style>
 	</head>
 	<body >
-		<font size=15><h1 align="center"> 目录</h1></font>
+
 		<img src="img2.jpg" width="100%" height="100%" style="z-index:-100;position:absolute;left:0;top:0">
-		<a href="div2.html" ><font size=5 ><h1 align="center">基本信息</h1></font></a>
-		<a href="div3.html" ><font size=5 ><h1 align="center">个人经历</h1></font></a>
-		<a href="div4.html" ><font size=5 ><h1 align="center">特长评价</h1></font></a>
-			<div class="cat" ><img src="img1.gif">
+				<table border="1" margin=0px auto; >
+			<tr>
+				<th>姓名</th>
+				<th>龙晖</th>
+				<th>性别</th>
+				<th>男</th>
+				<th rowspan="4"><img src="img5.jpg" ></th>
+			</tr>
+			<tr>
+				<th>求职意向</th>
+				<th>大数据开发工程师</th>
+				<th>籍贯</th>
+				<th>浙江杭州</th>
+			</tr>
+			<tr>
+				<th>毕业学校</th>
+				<th colspan="3">浙江理工大学</th>
+			</tr>
+				<th>专业</th>
+				<th colspan="3">通信工程</th>
+			<tr>
+				<th>地址</th>
+				<th colspan="4">浙江省杭州市萧山区</th>
+			</tr>
+			<tr>
+				<th rowspan="2">教育经历</th>
+				<th colspan="4">2015.9-2016.6浙江理工大学电子信息专业</th>
+			</tr>
+			<tr>
+				<th colspan="4">2016.9-2019.6浙江理工大学通信工程专业</th>
+			</tr>
+			<tr>
+				<th>实习经历</th>
+				<th colspan="4">2017.8-2017.9在浙江引春机械有限公司实习</th>
+			</tr>
+			<tr>
+				<th rowspan="4">奖励与证书</th>
+				<th colspan="4">2015.12校ACM竞赛三等奖</th>
+			</tr>
+			<tr>
+				<th colspan="4">2016.4思想道德修养与法律基础课程论文获得校优秀论文</th>
+			</tr>
+			<tr>
+				<th colspan="4">2015.9-2016.6校优秀学生三等奖学金</th>
+			</tr>
+			<tr>
+				<th colspan="4">2016.9-2017.6校优秀学生三等奖学金</th>
+			</tr>
+			<tr>
+				<th rowspan="3">能力与特长</th>
+				<th>个人专长</th>
+				<th colspan="4">熟悉使用matlab、eclipse、Multisim等软件</th>
+			</tr>
+			<tr>
+				<th>计算机水平</th>
+				<th colspan="4">计算机二级（C）优秀</th>
+			</tr>
+			<tr>
+				<th >英语水平</th>
+				<th colspan="4">CET4 能熟练听说读写译</th>
+			</tr>
+			<tr>
+				<th rowspan="3">奖励与证书</th>
+				<th colspan="4">2015.12校ACM竞赛三等奖</th>
+			</tr>
+			<tr>
+				<th colspan="4">2015.9-2016.6校优秀学生三等奖学金</th>
+			</tr>
+			<tr>
+				<th colspan="4">2016.9-2017.6校优秀学生三等奖学金</th>
+			</tr>
+			<tr>
+				<th rowspan="4">自我评价</th>
+			</tr>
+			<tr>
+				<th colspan="4" width=100px;>本人性格开朗，为人细心，做事一丝不苟，能吃苦耐劳，工作脚踏实地，有较强的责任心，具有团队合作精神，又具有较强的独立工作能力，思维活跃，工作认真负责，不推卸责任，能承受工作中的压力。</th>
+			</tr>
+		</table>
 			</div>
 	</body>
 </html>
