--- a/div1.html
+++ b/div1.html
@@ -3,17 +3,16 @@
 	<head>
 		<title>catalog</title>
 		<style>
-		.cat{
-			margin:0px auto;
-			width:1px;
-			height:1px;
+		.back{
+			background-color:#f0f022;
 		}
 		</style>
 	</head>
-	<body >
+	<body>
 
-		<img src="img2.jpg" width="100%" height="100%" style="z-index:-100;position:absolute;left:0;top:0">
-				<table border="1" margin=0px auto; >
+		<img src="img1.gif" width="50%" height="100%" style="z-index:-100;position:absolute;left:50%;top:0">
+		<img src="img6.gif" width="50%" height="100%" style="z-index:-100;position:absolute;left:0;top:0">
+				<table border="1"  margin-left=1000px;>
 			<tr>
 				<th>姓名</th>
 				<th>龙晖</th>
