--- a/div1.html
+++ b/div1.html
@@ -10,8 +10,8 @@
 	</head>
 	<body>
 
-		<img src="img6.gif" width="100%" height="100%" style="z-index:-100;position:absolute;left:0;top:0">
-				<table border="1"  margin-left=1000px;>
+		<img src="img2.jpg" width="100%" height="100%" style="z-index:-100;position:absolute;left:0;top:0">
+				<table border="1" align="center">
 			<tr>
 				<th>姓名</th>
 				<th>龙晖</th>
