--- a/div2.html
+++ b/div2.html
@@ -1,4 +1,4 @@
-﻿	<!doctype html>
+	<!doctype html>
 <html>
 
 	<head>
@@ -7,8 +7,8 @@
 			.view{
 					background-color: #81d6fb;
 					border-radius: 20px;
-					width: 1000px;
-					height: 600px;
+					width: 600px;
+					height: 800px;
 					margin: auto;
 					position: absolute;
 					top: 0;
@@ -75,7 +75,7 @@
 			.dog{
 				margin-left:10px;
 				margin-top:-500px;
-				position:absolute;
+				position:absolute; 	
 				height:100px;
 				width:100px;
 			}
@@ -85,7 +85,7 @@
 				border-bottom:1px solid;
 			}
 			.bottomline{
-				width:700px;
+				width:600px;
 				border-bottom:1px solid;
 			}
 			.head{
@@ -116,7 +116,7 @@
 				<br/>
 				<br/>
 				<br/>
-				<h1 class="bottomline">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<h1 class="bottomline">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				龙晖</h1>
 				<img src="img5.jpg" class="head">
 			</div>
