--- a/div2.html
+++ b/div2.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>个人简历</title>
 		<style>
-			.view{
+			.content1{
 					background-color: #81d6fb;
 					border-radius: 20px;
 					width: 600px;
@@ -12,12 +12,10 @@
 					margin: auto;
 					position: absolute;
 					top: 0;
-					left: 300px;
+					left: 270px;
 					right: 0;
 					bottom: 0px;
-			}
-			.content1{
-				
+					//display:none;
 			}
 			.catalog{
 				background-color: #81fb9b;
@@ -67,14 +65,14 @@
 			}
 			.cat1{
 				margin-left:10px;
-				margin-top:-320px;
+				margin-top:-420px;
 				position:absolute;
 				height:100px;
 				width:100px;
 			}
 			.dog{
 				margin-left:10px;
-				margin-top:-500px;
+				margin-top:-700px;
 				position:absolute; 	
 				height:100px;
 				width:100px;
@@ -88,7 +86,14 @@
 				width:600px;
 				border-bottom:1px solid;
 			}
+			.bottomline2{
+				width:300px;
+				margin-left:300px;
+				margin-top:-280px;
+				border-bottom:1px solid;
+			}
 			.head{
+				
 				border-radius:200px;
 			}
 		</style>
@@ -97,12 +102,24 @@
 	<body>
 		<img src="img2.jpg" width="100%" height="100%" style="z-index:-100;position:absolute;left:0;top:0">
 		<div class="catalog" id="catalog" >
+		<br/>
+		<br/>
+		<br/>
+		<br/>
 			<ul class="menu1" style="cursor:pointer;">
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;个人信息
 			</ul>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
 			<ul class="menu2" style="cursor:pointer;">
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;教育经历
 			</ul>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
 			<ul class="menu3" style="cursor:pointer;">
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;自我评价
 			</ul>
@@ -110,17 +127,17 @@
 			<img src="img1.gif" class="cat1" style="cursor:pointer;">
 			<img src="img4.gif" class="cat2" style="cursor:pointer;">
 		</div>
-		<div class="view" id="view">
 			<div class="content1" id="content">
 				<div class="fontsize">个人信息</div>
 				<br/>
 				<br/>
 				<br/>
 				<h1 class="bottomline">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				龙晖</h1>
+				龙晖
+				</h1>
 				<img src="img5.jpg" class="head">
+				<h3 class="bottomline2">求职意向：大数据开发工程师</h3>
 			</div>
-		</div>
 	</body>
 
 </html>
