--- a/div2.html
+++ b/div2.html
@@ -192,6 +192,12 @@
 				text-align:center;
 				margin:30px auto;
 			}
+			.bottomlineb{
+				margin-left:300px;
+				line-height:80px;
+				height:80px;
+				width:200px;
+			}
 		</style>
 		<script>
 			window.onload = function(){
@@ -310,7 +316,7 @@
 		<br/>
 		<br/>
 		<br/>
-			<ul class="menu1" id="menu1" style="cursor:pointer;" onclick="onclick_1(1)">
+			<ul class="menu1" id="menu1" style="cursor:pointer; font-family:""" onclick="onclick_1(1)" >
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;个人信息
 			</ul>
 		<br/>
@@ -347,7 +353,7 @@
 				<h3 class="bottomline5" style="color:white">毕业学校：浙江理工大学</h3>
 				<h3 class="bottomline6" style="color:white">联系电话：15968159626</h3>
 				<h3 class="bottomline7" style="color:white">地址：浙江省杭州市萧山区</h3>
-				<h1 class="bottomline7" onclick="onclick_1(2)" style="cursor:pointer; color:red">back</h1>
+				<button class="bottomlineb" onclick="onclick_1(2)" style="cursor:pointer; color:red; font-size:20px;" >back</button>
 			</div>
 			
 			<div class="content2" id="content2">
@@ -366,7 +372,7 @@
 				<h3 class="bottomline7">2016.9-2019.6浙江理工大学通信工程专业</h3>
 				<h3 class="bottomline7">2016.9-2017.6校优秀学生三等奖学金</h3>
 				<h3 class="bottomline7">2017.8-2017.9在浙江引春机械有限公司实习</h3>
-				<h1 class="bottomline7" onclick="onclick_2(2)" style="cursor:pointer; color:red" >back</h1>
+				<button class="bottomlineb" onclick="onclick_2(2)" style="cursor:pointer; color:red; font-size:20px;" >back</button>
 			</div>
 			<div class="content3" id="content3">
 				<div class="fontsize" style="color:yellow;">特长评价</div>
@@ -381,7 +387,7 @@
 				<h3 class="bottomline9" style="color:yellow;"> CET4 571 分能熟练听说读写译</h3>
 				<h1 class="bottomline7" style="color:yellow;">自我评价</h1>
 				<h3 class="bottomline11" style="color:yellow;">本人性格开朗，为人细心，做事一丝不苟，能吃苦耐劳，工作脚踏实地，有较强的责任心，具有团队合作精神，又具有较强的独立工作能力，思维活跃，工作认真负责，不推卸责任，能承受工作中的压力。</h3>
-				<h1 class="bottomline7" onclick="onclick_3(2)" style="cursor:pointer; color:red" >back</h1>
+				<button class="bottomlineb" onclick="onclick_3(2)" style="cursor:pointer; color:red; font-size:20px;" >back</button>
 			</div>
 	</body>
 
