--- a/div2.html
+++ b/div2.html
@@ -3,9 +3,10 @@
 
 	<head>
 		<title>个人简历</title>
+		<meta charset="utf-8">
 		<style>
 			.content1{
-					background-color: #81d6fb;
+					background-color: #81fb9b;
 					border-radius: 20px;
 					width: 600px;
 					height: 800px;
@@ -17,7 +18,7 @@
 					display:none;
 			}
 			.content2{
-					background-color: #81d6fb;
+					background-color: #81fb9b;
 					margin-top:75px;
 					border-radius: 20px;
 					width: 600px;
@@ -30,7 +31,7 @@
 					display:none;
 			}
 			.content3{
-					background-color: #81d6fb;
+					background-color: #81fb9b;
 					margin-top:160px;
 					border-radius: 20px;
 					width: 600px;
@@ -43,7 +44,7 @@
 					display:none;
 			}
 			.catalog{
-				background-color: #81fb9b;
+				background-color: #81d6fb;
 				width:250px;
 				position: absolute;
 					top: 0;
@@ -56,30 +57,21 @@
 				text-align:center;
 				line-height:150px;
 				font-size:20px;
-				border-top-color:red;
-				border-bottom-color:white;
-				border-left-color:yellow;
-				border-right-color:blue;
+				border-color:white;
 			}
 			.menu2{
 				border:2px solid;
 				text-align:center;
 				line-height:150px;
 				font-size:20px;
-				border-top-color:red;
-				border-bottom-color:white;
-				border-left-color:yellow;
-				border-right-color:blue;
+				border-color:white;
 			}
 			.menu3{
 				border:2px solid;
 				text-align:center;
 				line-height:150px;
 				font-size:20px;
-				border-top-color:red;
-				border-bottom-color:white;
-				border-left-color:yellow;
-				border-right-color:blue;
+				border-color:white;
 			}
 			.cat2{
 				margin-left:10px;
@@ -152,20 +144,6 @@
 				border-bottom:1px solid;
 				text-align:center;
 			}
-			.head1{	
-				border-radius:200px;
-			}
-			.head2{
-				height:240px;
-				width:200px;
-				border-radius:200px;
-			}
-			.head3{
-				height:240px;
-				width:200px;
-				margin-top:40px;
-				border-radius:200px;
-			}
 			.bottomline8{
 				width:420px;
 				margin-left:180px;
@@ -197,6 +175,34 @@
 				line-height:40px;
 				height:40px;
 				width:100px;
+			}
+			.bottomline12{
+				margin-top:40px;
+				width:520px;
+				margin-left:80px;
+				border-bottom:1px solid;
+				text-align:center;
+			}
+			.bottomline13{
+				margin-top:40px;
+				width:560px;
+				margin-left:40px;
+				border-bottom:1px solid;
+				text-align:center;
+			}
+			.head1{	
+				border-radius:200px;
+			}
+			.head2{
+				height:240px;
+				width:200px;
+				border-radius:200px;
+			}
+			.head3{
+				height:240px;
+				width:200px;
+				margin-top:40px;
+				border-radius:200px;
 			}
 		</style>
 		<script>
@@ -357,36 +363,36 @@
 			</div>
 			
 			<div class="content2" id="content2">
-				<div class="fontsize">教育经历</div>
+				<div class="fontsize" style="color:white">教育经历</div>
 				<br/>
 				<br/>
 				<br/>
-				<h1 class="bottomline" align="center";>
+				<h1 class="bottomline" align="center"; style="color:white">
 				浙江理工大学
 				</h1>
 				<img src="img1.gif" class="head2" id="rotatecat">
-				<h3 class="bottomline8">2015.9-2016.6浙江理工大学电子信息专业</h3>
-				<h3 class="bottomline5">2015.12校ACM竞赛二等奖</h3>
-				<h3 class="bottomline5">2016.4思想道德修养与法律基础课程论文获得校优秀论文</h3>
-				<h3 class="bottomline9">2015.9-2016.6校优秀学生三等奖学金</h3>
-				<h3 class="bottomline7">2016.9-2019.6浙江理工大学通信工程专业</h3>
-				<h3 class="bottomline7">2016.9-2017.6校优秀学生三等奖学金</h3>
-				<h3 class="bottomline7">2017.8-2017.9在浙江引春机械有限公司实习</h3>
+				<h3 class="bottomline8" style="color:white">2015.9-2016.6浙江理工大学电子信息专业</h3>
+				<h3 class="bottomline5" style="color:white">2015.12校ACM竞赛二等奖</h3>
+				<h3 class="bottomline5" style="color:white">2016.4思想道德修养与法律基础课程论文获得校优秀论文</h3>
+				<h3 class="bottomline9" style="color:white">2015.9-2016.6校优秀学生三等奖学金</h3>
+				<h3 class="bottomline12" style="color:white">2016.9-2019.6浙江理工大学通信工程专业</h3>
+				<h3 class="bottomline13" style="color:white">2016.9-2017.6校优秀学生三等奖学金</h3>
+				<h3 class="bottomline7" style="color:white">2017.8-2017.9在浙江引春机械有限公司实习</h3>
 				<button class="bottomlineb" onclick="onclick_2(2)" style="cursor:pointer; color:red; font-size:20px;" >back</button>
 			</div>
 			<div class="content3" id="content3">
-				<div class="fontsize" style="color:yellow;">特长评价</div>
+				<div class="fontsize" style="color:white;">特长评价</div>
 				<br/>
-				<h1 class="bottomline" align="center"; style="color:yellow;">
+				<h1 class="bottomline" align="center"; style="color:white;">
 				能力特长
 				</h1>
 				<img src="img4.gif" class="head3">
-				<h3 class="bottomline10" style="color:yellow;">精通Java，熟悉C、html、CSS、JavaScript、mysql</h3>
-				<h3 class="bottomline5" style="color:yellow;">能熟练使用eclipse、mysql、excel、matlab、multisim等软件</h3>
-				<h3 class="bottomline5" style="color:yellow;">计算机二级（C）95分</h3>
-				<h3 class="bottomline9" style="color:yellow;"> CET4 571 分能熟练听说读写译</h3>
-				<h1 class="bottomline7" style="color:yellow;">自我评价</h1>
-				<h3 class="bottomline11" style="color:yellow;">本人性格开朗，为人细心，做事一丝不苟，能吃苦耐劳，工作脚踏实地，有较强的责任心，具有团队合作精神，又具有较强的独立工作能力，思维活跃，工作认真负责，不推卸责任，能承受工作中的压力。</h3>
+				<h3 class="bottomline10" style="color:white;">精通Java，熟悉C、html、CSS、JavaScript、mysql</h3>
+				<h3 class="bottomline5" style="color:white;">能熟练使用eclipse、mysql、excel、matlab、multisim等软件</h3>
+				<h3 class="bottomline5" style="color:white;">计算机二级（C）95分</h3>
+				<h3 class="bottomline9" style="color:white;"> CET4 571 分能熟练听说读写译</h3>
+				<h1 class="bottomline7" style="color:white;">自我评价</h1>
+				<h3 class="bottomline11" style="color:white;">本人性格开朗，为人细心，做事一丝不苟，能吃苦耐劳，工作脚踏实地，有较强的责任心，具有团队合作精神，又具有较强的独立工作能力，思维活跃，工作认真负责，不推卸责任，能承受工作中的压力。</h3>
 				<button class="bottomlineb" onclick="onclick_3(2)" style="cursor:pointer; color:red; font-size:20px;" >back</button>
 			</div>
 	</body>
