--- a/div2.html
+++ b/div2.html
@@ -5,6 +5,11 @@
 		<title>个人简历</title>
 		<meta charset="utf-8">
 		<style>
+			.backgroundpic{
+				background-size:contain|cover;
+				width:100%;
+				height: auto;
+			}
 			.content1{
 					background-color: #81fb9b;
 					border-radius: 20px;
@@ -316,7 +321,7 @@
 	</head>
 
 	<body>
-		<img src="img2.jpg" width="100%" height="100%" style="z-index:-100;position:absolute;left:0;top:0">
+		<img src="img2.jpg" class="backgroundpic">
 		<div class="catalog" id="catalog" >
 		<br/>
 		<br/>
